Fix Homepage Layout Issues (#1692)
* Fix content-container on mobile breakpoint (479px)

* use media-breakpoint-down(sm) to fix #1688

--- a/src/_assets/css/_dash.scss
+++ b/src/_assets/css/_dash.scss
@@ -101,6 +101,9 @@ $dash-header-bg: #17212f;
         transform: none !important;
         padding:20px;
       }
+      @include media-breakpoint-down(sm) {
+        width: 100%;
+      }
     }
 
     .content-icon img {
